Fixes member names stretching out beyond bounds

--- a/app/_scss/pages/members.scss
+++ b/app/_scss/pages/members.scss
@@ -16,6 +16,7 @@
 			display: inline-block;
 			width: 25%; /* Firefox needs 25% */
 			margin: 2.4% 3.5% 6% 3.5%;
+			vertical-align: text-top;
 			text-align: center;
 		}
 
@@ -44,10 +45,6 @@
 		img, figcaption, p, ul {
 			width: 100%;
 			border-radius: 50%;
-		}
-
-		figcaption, p {
-			white-space: nowrap;
 		}
 	}
 }
@@ -126,10 +123,6 @@
 			figure {
 				width: 70%;
 				margin: 0 auto 2.8em auto;
-			}
-
-			h2, p {
-				white-space: normal;
 			}
 
 			h2 {
